service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moja-aplikacja-service
spec:
  selector:
    app: moja-aplikacja
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
