ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moja-aplikacja-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: zad2.lab #localhost:80/index.html
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moja-aplikacja-service
            port:
              number: 80
